--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!doctype html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="/">
-  <link rel="stylesheet" type="text/css" href="output.css" >
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/">
+    <link rel="stylesheet" type="text/css" href="output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Xeta - Login</title>
 </head>
+
 <body>
-    <div class="flex items-center justify-center h-screen bg-discord-gray text-white" >
-        <a id="login" href="https://discord.com/api/oauth2/authorize?client_id=983170789656367144&redirect_uri=http%3A%2F%2Flocalhost%3A53134%2Fauth%2Fdiscord&response_type=token&scope=identify" class="bg-discord-blue  text-xl px-5 py-3 rounded-md font-bold flex items-center space-x-4 hover:bg-gray-600 transition duration-75">
+    <div class="flex items-center justify-center h-screen bg-discord-gray text-white">
+        <a id="login"
+            href="https://discord.com/api/oauth2/authorize?client_id=948150632982933504&redirect_uri=http%3A%2F%2Flocalhost%3A53134%2Fauth%2Fdiscord%2F&response_type=token&scope=identify"
+            class="bg-discord-blue  text-xl px-5 py-3 rounded-md font-bold flex items-center space-x-4 hover:bg-gray-600 transition duration-75">
             <i class="fa-brands fa-discord text-2xl"></i>
             <span>Login with Discord</span>
         </a>
     </div>
-    
+
 </body>
+
 </html>
